--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -16,9 +16,9 @@
 	<body style="background-color: #e8e8e8 !important">
 
 
-		<iframe src="http://qa3mmc3.ele.tue.nl/all/dump"></iframe>
+		<!-- <iframe src="http://qa3mmc3.ele.tue.nl/all/dump"></iframe> -->
 
-
+		<div id="dyndata"></div>
 
 
 
