--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -15,10 +15,9 @@
 
 	<body style="background-color: #e8e8e8 !important">
 
+		<div class="col-md-12">Enter hostname:<input type="text" size="50" id="host"/></div>
 
-		<!-- <iframe src="http://qa3mmc3.ele.tue.nl/all/dump"></iframe> -->
-
-		<div id="dyndata"></div>
+		<div id="dyndata" style="mwn-width: 550px; max-width: 1400px"></div>
 
 
 
