--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -10,7 +10,7 @@
 		<title>Trident i2c controller rest api demo</title>
 
 		<!-- Bootstrap core CSS -->
-		<link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="./bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 
 	<body style="background-color: #e8e8e8 !important">
@@ -26,8 +26,8 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="./jquery/jquery.min.js"></script>
-		<script src="./bootstrap/js/bootstrap.min.js"></script>
+		<script src="./jquery/jquery-1.12.1.min.js"></script>
+		<script src="./bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
 		<script src="./custom_code.js"></script>
 	</body>
